--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
                 whatsapp: document.getElementById('whatsapp').value
             };
 
-            fetch('https://script.google.com/macros/s/AKfycbzxh6S6wNPgF5Q3bo8gKyRA-uknNeAiVbj9zg0yn7Mnmld0ILydXFxj0oqO8bOxYO19MA/exec', {
-                method: 'POST',
-                body: JSON.stringify(data)
-            })
+            fetch('https://script.google.com/macros/s/AKfycbzvo8J-ACz8mTKjFFyRu54VcWmUqil07JS5A-rhtqVTIhhvzrnhWTtICRV3uS5KRdJ8UQ/exec', {
+  method: 'POST',
+  mode: 'cors', // Asegúrate de que esto esté activo
+  headers: {
+    'Content-Type': 'application/json'
+  },
+  body: JSON.stringify(data)
+})
             .then(response => alert('Registro exitoso!'))
             .catch(error => alert('Error: ' + error));
         });
