--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); 
             color: white; 
             padding: 20px; 
-            /* text-align: center; <-- Eliminado */
             border-bottom: 1px solid #e0e0e0; 
             position: relative;
             display: flex;
-            justify-content: space-between; /* <-- Modificado */
+            justify-content: space-between;
             align-items: center;
         }
         .chat-header h1 { margin: 0; font-size: 1.5em; }
@@ -127,7 +126,7 @@
             width: 20px;
             height: 20px;
             font-size: 11px;
-            display: none; /* Oculto por defecto */
+            display: none;
             justify-content: center;
             align-items: center;
             font-weight: bold;
@@ -144,33 +143,57 @@
         }
          #qrcode-display { display: flex; justify-content: center; align-items: center; padding: 20px; }
          
+        .profile-avatar-wrapper {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 16px;
+        }
+        .profile-avatar {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background-color: #764ba2;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2.5em;
+            font-weight: bold;
+            border: 3px solid white;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            overflow: hidden;
+        }
+        .profile-avatar img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
 
-/* --- NUEVOS ESTILOS PARA LA FOTO DE PERFIL --- */
-.profile-avatar-wrapper {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 16px;
-}
-.profile-avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: #764ba2;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2.5em;
-    font-weight: bold;
-    border: 3px solid white;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    overflow: hidden; /* Para que la imagen no se salga del círculo */
-}
-.profile-avatar img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Asegura que la imagen cubra todo el espacio sin deformarse */
-}
+        /* --- INICIO DE LA CORRECCIÓN VISUAL: NUEVO ESTILO PARA EL BOTÓN DE LÁPIZ --- */
+        .edit-icon-button {
+            background-color: #f1f3f5;
+            border: 1px solid #dee2e6;
+            border-radius: 6px; /* Bordes suaves */
+            width: 32px;
+            height: 32px;
+            padding: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: background-color 0.2s;
+            flex-shrink: 0; /* Evita que el botón se encoja */
+        }
+        .edit-icon-button:hover {
+            background-color: #e9ecef;
+        }
+        .edit-icon-button svg {
+            width: 16px;
+            height: 16px;
+            fill: #495057; /* Color del ícono */
+        }
+        /* --- FIN DE LA CORRECCIÓN VISUAL --- */
+
     </style>
 </head>
 <body>
@@ -415,7 +438,7 @@
         }
 
         async handleButtonClick(event) {
-            const button = event.target.closest('.command-button');
+            const button = event.target.closest('.command-button, .edit-icon-button'); // Incluir el nuevo botón
             if (!button || button.disabled) return;
             const buttonContainer = button.closest('.command-buttons-container, .schedule-actions');
             if (buttonContainer) { buttonContainer.querySelectorAll('.command-button').forEach(btn => btn.disabled = true); }
@@ -424,7 +447,10 @@
             const dayToEdit = button.dataset.dayEdit;
             const dayToConfirm = button.dataset.dayConfirm;
             if (command) {
-                this.addUserMessage(button.textContent.trim());
+                // Si el botón es el de editar, no mostramos el mensaje del usuario
+                if(command !== '/editar_shop_name') {
+                    this.addUserMessage(button.textContent.trim());
+                }
                 if (command.startsWith('check_availability:')) {
                     const parts = command.split(':');
                     const dateString = parts[1];
@@ -802,7 +828,9 @@
                     <li style="display: flex; align-items: center;">
                         <span class="item-name">Barbería:</span>
                         <span class="item-detail" style="margin-left: 1rem; text-align: left;">${profile.barber_shop_name}</span>
-                        <button class="command-button" data-command="/editar_shop_name" style="padding: 4px 10px; font-size: 0.85em; flex-shrink: 0; margin-left: auto;">Editar</button>
+                        <button class="edit-icon-button" data-command="/editar_shop_name" style="margin-left: auto;" title="Editar nombre de la barbería">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"></path></svg>
+                        </button>
                     </li>
         
                     <li><span class="item-name">Tipo de Cuenta:</span><span class="item-detail">${accountType}</span></li>
