--- a/Cliente.html
+++ b/Cliente.html
@@ -7,125 +7,158 @@
     <link rel="manifest" href="manifest-cliente.json">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
-    <style>
-        /* Estilos base (Mismos que el archivo original para mantener la consistencia) */
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: system-ui, -apple-system, sans-serif; background: #f5f5f5; height: 100vh; display: flex; justify-content: center; align-items: center; }
-        .chat-container { width: 100%; max-width: 400px; height: 100vh; background: white; display: flex; flex-direction: column; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        
-        /* --- ENCABEZADO MODIFICADO --- */
-        .chat-header {
-            background: linear-gradient(135deg, #007bff 0%, #0056b3 100%);
-            color: white;
-            padding: 10px 15px; /* Reducimos un poco el padding para que se vea mejor */
-            text-align: left; /* Alineamos el texto a la izquierda */
-            position: relative;
-            display: flex;
-            justify-content: flex-start; /* Alineamos los elementos al inicio */
-            align-items: center;
-            gap: 15px; /* Añadimos un espacio entre la foto y el texto */
-        }
-        
-        .chat-header h1 { margin: 0; font-size: 1.5em; }
-        .chat-header p { margin: 5px 0 0 0; opacity: 0.9; font-size: 0.9em; }
-        .messages-container { flex: 1; padding: 15px; overflow-y: auto; background: #f8f9fa; min-height: 0; }
-        .message { margin-bottom: 12px; display: flex; flex-direction: column; animation: fadeIn 0.3s ease-in; }
-        .message.user { align-items: flex-end; }
-        .message.bot { align-items: flex-start; }
-        .message-content { padding: 10px 14px; border-radius: 18px; max-width: 85%; word-wrap: break-word; line-height: 1.4; }
-        .message.user .message-content { background: #007bff; color: white; border-bottom-right-radius: 4px; }
-        .message.bot .message-content { background: #e9ecef; color: #333; border-bottom-left-radius: 4px; }
-        .message-time { font-size: 0.7em; color: #666; margin-top: 4px; padding: 0 8px; }
-        .typing { display: flex; padding: 10px 14px; background: white; border-radius: 18px; border: 1px solid #e0e0e0; }
-        .typing span { height: 6px; width: 6px; background: #999; border-radius: 50%; display: block; margin: 0 2px; animation: typing 1s infinite ease-in-out; }
-        .typing span:nth-child(1) { animation-delay: 0.2s; }
-        .typing span:nth-child(2) { animation-delay: 0.4s; }
-        .typing span:nth-child(3) { animation-delay: 0.6s; }
-        .input-container { display: flex; padding: 12px; background: white; border-top: 1px solid #e0e0e0; gap: 8px; }
-        .message-input { flex: 1; padding: 10px 14px; border: 1px solid #ddd; border-radius: 20px; outline: none; font-size: 14px; }
-        .send-button { padding: 10px 16px; background: #007bff; color: white; border: none; border-radius: 20px; cursor: pointer; }
-        .send-button:disabled { background: #ccc; cursor: not-allowed; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(8px); } to { opacity: 1; transform: translateY(0); } }
-        @keyframes typing { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-3px); } }
-        .bot-card { background-color: #ffffff; border: 1px solid #e9ecef; border-radius: 12px; padding: 16px; width: 100%; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
-        .bot-card h3 { margin: 0 0 12px 0; color: #343a40; border-bottom: 1px solid #f1f3f5; padding-bottom: 8px; font-size: 1.1em; }
-        .bot-card p { margin: 0 0 8px 0; line-height: 1.5; color: #495057; }
-        .bot-card ul { list-style: none; padding: 0; margin: 0 0 10px 0; }
-        .bot-card li { padding: 8px 0; border-bottom: 1px solid #f1f3f5; display: flex; justify-content: space-between; align-items: center; }
-        .bot-card li:last-child { border-bottom: none; }
-        .bot-card .helper-text { font-size: 0.8em; color: #888; margin-top: 5px; }
-        .command-buttons-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); gap: 10px; margin-top: 10px; }
-        .command-button { background-color: #f8f9fa; border: 1px solid #dee2e6; border-radius: 8px; padding: 12px 8px; font-size: 0.9em; font-weight: 500; color: #495057; cursor: pointer; text-align: center; transition: background-color 0.2s, box-shadow 0.2s; width: 100%; }
-        .command-button:hover { background-color: #e9ecef; box-shadow: 0 1px 3px rgba(0,0,0,0.08); }
-        .command-button.full-width { grid-column: 1 / -1; }
-        .command-button.confirm { background-color: #28a745; color: white; }
-        .command-button.cancel { background-color: #dc3545; color: white; }
+<style>
+    /* --- INICIO: NUEVOS ESTILOS DARK MODE --- */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { 
+        font-family: system-ui, -apple-system, sans-serif; 
+        background: #000; 
+        height: 100vh; 
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+    }
+    .chat-container { 
+        width: 100%; 
+        max-width: 400px; 
+        height: 100vh; 
+        background: #121212; 
+        color: #E0E0E0;
+        display: flex; 
+        flex-direction: column; 
+        box-shadow: 0 0 15px rgba(255,179,0,0.1); 
+    }
+    .chat-header {
+        background: #1E1E1E;
+        color: white;
+        padding: 10px 15px;
+        text-align: left;
+        position: relative;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 15px;
+        border-bottom: 1px solid #2C2C2C;
+    }
+    .chat-header h1 { margin: 0; font-size: 1.5em; }
+    .chat-header p { margin: 5px 0 0 0; opacity: 0.7; font-size: 0.9em; color: #A0A0A0; }
 
-        .header-icons {
-            position: absolute;
-            right: 15px;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-        .icon-wrapper {
-            position: relative;
-            cursor: pointer;
-        }
-        .icon-wrapper svg {
-            width: 26px;
-            height: 26px;
-            fill: white;
-        }
-        .notification-badge {
-            position: absolute;
-            top: -5px;
-            right: -8px;
-            background-color: #ff4757;
-            color: white;
-            border-radius: 50%;
-            width: 20px;
-            height: 20px;
-            font-size: 11px;
-            display: none; /* Oculto por defecto */
-            justify-content: center;
-            align-items: center;
-            font-weight: bold;
-            border: 2px solid #0056b3;
-        }
-        .notification-badge.visible {
-            display: flex;
-            animation: pulse-badge 2s infinite;
-        }
-        @keyframes pulse-badge {
-            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255, 71, 87, 0.7); }
-            70% { transform: scale(1); box-shadow: 0 0 0 8px rgba(255, 71, 87, 0); }
-            100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(255, 71, 87, 0); }
-        }
-        #qr-reader {
-            width: 100%;
-            border: 2px solid #f1f3f5;
-            border-radius: 8px;
-            overflow: hidden; /* Para que el video no se salga del borde redondeado */
-            margin-top: 10px;
-        }
+    .messages-container { 
+        flex: 1; 
+        padding: 15px; 
+        overflow-y: auto; 
+        background: #121212; 
+        min-height: 0; 
+    }
+    .message { margin-bottom: 12px; display: flex; flex-direction: column; animation: fadeIn 0.3s ease-in; }
+    .message.user { align-items: flex-end; }
+    .message.bot { align-items: flex-start; }
+    .message-content { padding: 10px 14px; border-radius: 18px; max-width: 85%; word-wrap: break-word; line-height: 1.4; }
+    .message.user .message-content { 
+        background: #FFB300; 
+        color: #121212; 
+        font-weight: 500;
+        border-bottom-right-radius: 4px; 
+    }
+    .message.bot .message-content { 
+        background: #1E1E1E; 
+        color: #E0E0E0; 
+        border-bottom-left-radius: 4px; 
+    }
+    .message-time { font-size: 0.7em; color: #A0A0A0; margin-top: 4px; padding: 0 8px; }
 
-        /* --- ESTILOS PARA LA FOTO DE PERFIL DEL BARBERO (NUEVO) --- */
-        .profile-picture-container {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%; /* La clave para hacerlo circular */
-            overflow: hidden; /* Oculta las esquinas de la imagen */
-            flex-shrink: 0; /* Evita que el contenedor se encoja si el nombre es largo */
-            border: 2px solid rgba(255, 255, 255, 0.8); /* Borde blanco semitransparente */
-            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
-        }
+    .typing { display: flex; padding: 10px 14px; background: #1E1E1E; border-radius: 18px; }
+    .typing span { height: 6px; width: 6px; background: #A0A0A0; border-radius: 50%; display: block; margin: 0 2px; animation: typing 1s infinite ease-in-out; }
+    .typing span:nth-child(1) { animation-delay: 0.2s; }
+    .typing span:nth-child(2) { animation-delay: 0.4s; }
+    .typing span:nth-child(3) { animation-delay: 0.6s; }
 
-        .barber-profile-pic {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Asegura que la imagen cubra el círculo sin deformarse */
-        }
-    </style>
+    .input-container { display: flex; padding: 12px; background: #1E1E1E; border-top: 1px solid #2C2C2C; gap: 8px; }
+    .message-input { 
+        flex: 1; 
+        padding: 10px 14px; 
+        border: 1px solid #2C2C2C; 
+        background-color: #121212;
+        color: #E0E0E0;
+        border-radius: 20px; 
+        outline: none; 
+        font-size: 14px; 
+    }
+    .message-input:focus {
+        border-color: #FFB300;
+    }
+    .send-button { 
+        padding: 10px 16px; 
+        background: #FFB300; 
+        color: #121212; 
+        font-weight: bold;
+        border: none; 
+        border-radius: 20px; 
+        cursor: pointer; 
+    }
+    .send-button:disabled { background: #555; color: #888; cursor: not-allowed; }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(8px); } to { opacity: 1; transform: translateY(0); } }
+    @keyframes typing { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-3px); } }
+
+    .bot-card { 
+        background-color: #1E1E1E; 
+        border: 1px solid #2C2C2C; 
+        border-radius: 12px; 
+        padding: 16px; 
+        width: 100%; 
+        box-shadow: 0 2px 4px rgba(0,0,0,0.2); 
+    }
+    .bot-card h3 { margin: 0 0 12px 0; color: #FFFFFF; border-bottom: 1px solid #2C2C2C; padding-bottom: 8px; font-size: 1.1em; }
+    .bot-card p { margin: 0 0 8px 0; line-height: 1.5; color: #A0A0A0; }
+    .bot-card ul { list-style: none; padding: 0; margin: 0 0 10px 0; }
+    .bot-card li { padding: 8px 0; border-bottom: 1px solid #2C2C2C; display: flex; justify-content: space-between; align-items: center; }
+    .bot-card li:last-child { border-bottom: none; }
+    .bot-card .helper-text { font-size: 0.8em; color: #888; margin-top: 5px; }
+
+    .command-buttons-container { display: grid; grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); gap: 10px; margin-top: 10px; }
+    .command-button { 
+        background-color: #2C2C2C; 
+        border: 1px solid #444; 
+        border-radius: 8px; 
+        padding: 12px 8px; 
+        font-size: 0.9em; 
+        font-weight: 500; 
+        color: #E0E0E0; 
+        cursor: pointer; 
+        text-align: center; 
+        transition: background-color 0.2s, box-shadow 0.2s; 
+        width: 100%; 
+    }
+    .command-button:hover { background-color: #444; box-shadow: 0 1px 3px rgba(0,0,0,0.2); }
+    .command-button.full-width { grid-column: 1 / -1; }
+    .command-button.confirm { background-color: #4CAF50; color: white; }
+    .command-button.cancel { background-color: #F44336; color: white; }
+
+    .header-icons { position: absolute; right: 15px; top: 50%; transform: translateY(-50%); }
+    .icon-wrapper { position: relative; cursor: pointer; }
+    .icon-wrapper svg { width: 26px; height: 26px; fill: white; }
+    .notification-badge {
+        position: absolute; top: -5px; right: -8px; background-color: #F44336; color: white;
+        border-radius: 50%; width: 20px; height: 20px; font-size: 11px; display: none;
+        justify-content: center; align-items: center; font-weight: bold; border: 2px solid #1E1E1E;
+    }
+    .notification-badge.visible { display: flex; animation: pulse-badge 2s infinite; }
+    @keyframes pulse-badge { 0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(244, 67, 54, 0.7); } 70% { transform: scale(1); box-shadow: 0 0 0 8px rgba(244, 67, 54, 0); } 100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(244, 67, 54, 0); } }
+
+    #qr-reader {
+        width: 100%;
+        border: 2px solid #2C2C2C;
+        border-radius: 8px;
+        overflow: hidden;
+        margin-top: 10px;
+    }
+    .profile-picture-container {
+        width: 50px; height: 50px; border-radius: 50%; overflow: hidden; flex-shrink: 0;
+        border: 2px solid rgba(255, 255, 255, 0.5); box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+    }
+    .barber-profile-pic { width: 100%; height: 100%; object-fit: cover; }
+    /* --- FIN: NUEVOS ESTILOS DARK MODE --- */
+</style>
 </head>
 <body>
     <div class="chat-container">
