Update print statement to show 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarberConnect</title>
+    <meta name="theme-color" content="#1E1E1E">
 <link rel="manifest" href="manifest.json">
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -1654,3 +1655,4 @@
 </script>
 </body>
 </html>
+
